# Murray-Context-Ledger-MCP-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTH.md  CONNECT.md  DEPLOY.md  MURRAY_CONTRACT.md
pipeline/: __init__.py
scripts/: ledger_admin.py  no_docker_stack.sh  rest_prefix_proxy.py  supabase_compat_auth.sql  supabase_compat_roles.sql  tunnel.sh
server/app/: __init__.py  admin.py  auth.py  config.py  db.py  main.py  mcp_server.py  schemas.py
supabase/: config.toml
supabase/migrations/: 0001_init.sql  0002_search_and_client_identity.sql  0003_org_tenancy.sql  0004_write_path.sql
tests/: conftest.py  test_admin_provisioning.py  test_auth.py  test_health.py  test_mcp_protocol.py  test_mcp_tools.py  test_membership_resolution.py  test_murray_contract.py  test_org_isolation.py  test_review_lifecycle.py  test_rls_isolation.py  test_role_governance.py  test_write_path.py
