[project]
name = "murray-context-ledger"
version = "0.1.0"
description = "Murray Context Ledger — hosted, user-owned memory layer for AI clients (P0: foundations)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "supabase>=2.15",
    "pyjwt[crypto]>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "httpx>=0.27",
]

[tool.uv]
# Application monorepo, not an installable distribution.
package = false

[tool.pytest.ini_options]
pythonpath = ["server", "."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["server", "tests", "pipeline"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
